fixed straddling effect to remove blurry canvas lines

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@
 *::-webkit-scrollbar {
   width: 15px;
   height: 15px;
-  background-color: transparent;
 }
 
 *::-webkit-scrollbar-button {
